--- a/detail.html
+++ b/detail.html
@@ -1,93 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>
-            Detail
-        </title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="styles/common.css" type="text/css">
-        <link rel="stylesheet" href="styles/detail.css" type="text/css">
-        <script src="https://kit.fontawesome.com/bb16adde44.js" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-            <header>
-                <a id="logo-link" href="index.html"><img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
-                <button id="login" class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
-            </header>
-            <main>  
-                <div id="detail-box">
-                    <div id="detail-carousel" class="carousel slide" data-ride="carousel" >
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="image1">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="image2">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="image3">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#detail-carousel" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>   
-                        <a class="carousel-control-next" href="#detail-carousel" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
-                    <div id="form-div">        
-                        <form id="detail-form" action = "payment.html">
-                            <div>
-                                <label for = "number-adults">No. of Adults: </label>
-                                <input id = "number-adults" type = "number" min = "1" max = "999" name = "adults" required>
-                            </div>
-                            <div>
-                                <label for = "name">Name: </label>
-                                <input id = "name" type ="text" maxlength="50" name = "host-name" required>
-                            </div>
-                            <div>
-                                <label for = "checkin-date">Check-in date: </label></th>
-                                <input id = "checkin-date" type ="date" name = "checkin-date" required>
-                            </div>
-                            <div>
-                                <label for = "checkout-date">Check-out date: </label></th>
-                                <input id = "checkout-date" type ="date" name = "checkout-date" required>
-                            </div>
-                            <div>
-                                <label for = "total">Total: </label></th>
-                                <input id = "total"  name = "total" readonly>
-                            </div>
-                            <div id ="book-btn">
-                                <button id = "book" type="submit"value="1" name = "book" class="btn btn-outline-success">Book rooms</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                    <div id="description">
-                        <h3>Radisson Blu</h3>
-                        <h4>Ratings</h4>
-                        <i class="fas fa-star star-rate"></i>
-                        <i class="fas fa-star star-rate"></i>
-                        <i class="fas fa-star star-rate"></i>
-                        <i class="fas fa-star star-rate"></i>
-                        <i class="fas fa-star star-rate"></i>
-                        <h4>Features</h4>
-                        <ul>
-                            <li>Delicious Food</li>
-                            <li>Hygenic</li>
-                            <li>Excellant Service</li>
-                        </ul>
-                        <h4>Description</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="modal fade" id="loginModal" data-backdrop="static">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Detail</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/detail.css">
+    <script src="https://kit.fontawesome.com/bb16adde44.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <header>
+      <a id="logo-link" href="index.html"><img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
+      <button id="login" class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
+    </header>
+    <main>  
+      <div id="detail-box">
+        <!-- Carousel of hotel images -->
+        <div id="detail-carousel" class="carousel slide" data-ride="carousel" >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Hotel photos">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="Hotel photos">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="Hotel photos">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#detail-carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>   
+          <a class="carousel-control-next" href="#detail-carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <!-- Details to initiate payment -->
+        <div id="form-div">        
+          <form id="detail-form" action = "payment.html">
+            <div>
+              <label for = "number-adults">No. of Adults: </label>
+              <input id = "number-adults" type = "number" min = "1" max = "999" name = "adults" required>
+            </div>
+            <div>
+              <label for = "name">Name: </label>
+              <input id = "name" type ="text" maxlength="50" name = "host-name" required>
+            </div>
+            <div>
+              <label for = "checkin-date">Check-in date: </label></th>
+              <input id = "checkin-date" type ="date" name = "checkin-date" required>
+            </div>
+            <div>
+              <label for = "checkout-date">Check-out date: </label></th>
+              <input id = "checkout-date" type ="date" name = "checkout-date" required>
+            </div>
+              <div>
+              <label for = "total">Total: </label></th>
+              <input id = "total"  name = "total" readonly>
+            </div>
+            <div id ="book-btn">
+              <button id = "book" type="submit"value="1" name = "book" class="btn btn-outline-success">Book rooms</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div id="description">
+        <h3>Radisson Blu</h3>
+        <h4>Ratings</h4>
+        <!-- Stars to show rating -->
+        <i class="fas fa-star star-rate"></i>
+        <i class="fas fa-star star-rate"></i>
+        <i class="fas fa-star star-rate"></i>
+        <i class="fas fa-star star-rate"></i>
+        <i class="fas fa-star star-rate"></i>
+        <h4>Features</h4>
+        <ul>
+          <li>Delicious Food</li>
+          <li>Hygenic</li>
+          <li>Excellant Service</li>
+        </ul>
+        <h4>Description</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <!-- Login modal -->
+      <div class="modal fade" id="loginModal" data-backdrop="static">
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
@@ -117,8 +120,9 @@
                             </div>
                           </div>
                         </div>
-                    </div>
-                    <div class="modal fade" id="contactModal">
+      </div>
+      <!-- Contact modal -->
+      <div class="modal fade" id="contactModal">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -154,16 +158,16 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-            </main>
-            <footer>
-              <button id="contact" class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contact us</button>
-                <div id="social">
-                    <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
-                    <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
-                    <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
-                </div>
-                <p id="copyright">&copy; 2021 HOTEL BOOKING PVT LTD</p>
-            </footer>
-    </body>
+      </div>
+    </main>
+    <footer>
+      <button id="contact" class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contact us</button>
+      <div id="social">
+        <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" alt="facebook" height = "20px" width = "20px"></a>
+            <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" alt="instagram" height = "20px" width = "20px"></a>
+            <a href = "https://twitter.com"><img src = "assests/images/twitter.png" alt="twitter" height = "20px" width = "20px"></a>
+      </div>
+      <p id="copyright">&copy; 2021 HOTEL BOOKING PVT LTD</p>
+    </footer>
+  </body>
 </html>
