--- a/index.html
+++ b/index.html
@@ -1,133 +1,130 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Index
-        </title>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
-        <link rel="stylesheet" href="styles/common.css" type = "text/css">
-        <link rel="stylesheet" href="styles/index.css" type = "text/css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-        <div>
-            <header>
-                    <img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
-                    <button id="login" class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
-            </header>
-            <main>
-                <div id = "content">
-                    <div id="search-bar-img">
-                        <div id="search-bar">
-                            <label for = "city"></label>
-                            <input id = "city" type = "text" name = "city-name" placeholder="City">
-                        </div>
-                    </div>
-                    <div id="citycards">
-                        <div  id="delhi-img">
-                            <a href = "list.html" target = "_blank">
-                                <div class="card-overlay">Delhi</div>
-                            </a>
-                        </div>
-                        <div  id="goa-img">
-                            <div class="card-overlay">Goa</div>
-                        </div>
-                        <div  id="charminar-img">
-                            <div class="card-overlay">Charminar</div>
-                        </div>
-                        <div  id="calcutta-img">
-                            <div class="card-overlay">Calcutta</div>
-                        </div>  
-                    </div>
-                    <div id="view-more">
-                        <button class="btn btn-secondary"><a href = "index.html">View more &gt; &gt;</a></button>
-                    </div>
-                    
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Index</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+      <div>
+        <header>
+          <img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
+          <button id="login" class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
+        </header>
+        <main>
+          <div id = "content">
+            <div id="search-bar-img">
+              <div id="search-bar">
+                <label for = "city"></label>
+                <input id = "city" type = "text" name = "city-name" placeholder="City">
+              </div>
+            </div>
+            <div id="citycards">
+              <div  id="delhi-img">
+                <a href = "list.html" target = "_blank">
+                  <div class="card-overlay">Delhi</div>
+                </a>
+              </div>
+              <div  id="goa-img">
+                  <div class="card-overlay">Goa</div>
+              </div>
+              <div  id="charminar-img">
+                  <div class="card-overlay">Charminar</div>
+              </div>
+              <div  id="calcutta-img">
+                  <div class="card-overlay">Calcutta</div>
+              </div>  
+            </div>
+            <div id="view-more">
+              <button class="btn btn-secondary"><a href = "index.html">View more &gt; &gt;</a></button>
+            </div>     
+          </div>
+          <!-- Login modal -->
+          <div class="modal fade" id="loginModal" data-backdrop="static">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title w-100 text-center">Login</h5>
+                  <buttom type="button" class="close" data-dismiss="modal" aria-label="close">
+                    <span aria-hidden="true">&times;</span>
+                  </buttom>
                 </div>
-                <div class="modal fade" id="loginModal" data-backdrop="static">
-                    <div class="modal-dialog">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title w-100 text-center">Login</h5>
-                          <buttom type="button" class="close" data-dismiss="modal" aria-label="close">
-                            <span aria-hidden="true">&times;</span>
-                          </buttom>
-                        </div>
-                        <div class="modal-body">
-                          <form id="login-form" action = "index.html">
-                            <div class="form-group">
-                                <label for ="email">Email Address</label>
-                                <input id="email" name="email" type="email" class="form-control" required placeholder="yourname@email.com" autocomplete="off">
-                            </div>
-                            <div class="form-group">
-                                <label for ="password" >Password</label>
-                                <input id="password" name="password" type="password" class="form-control" required  placeholder="*******" autocomplete="off">
-                            </div>
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="remember">
-                                <label class="form-check-label" for="remember">Remember me</label>
-                            </div>
-                            <button class="btn btn-primary btn-block rounded-pill" type="submit" name="submit" >
-                              Login
-                            </button>
-                          </form>
-                        </div>
-                      </div>
+                <div class="modal-body">
+                  <form id="login-form" action = "index.html">
+                    <div class="form-group">
+                      <label for ="email">Email Address</label>
+                        <input id="email" name="email" type="email" class="form-control" required placeholder="yourname@email.com" autocomplete="off">
                     </div>
+                    <div class="form-group">
+                      <label for ="password" >Password</label>
+                      <input id="password" name="password" type="password" class="form-control" required  placeholder="*******" autocomplete="off">
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="remember">
+                      <label class="form-check-label" for="remember">Remember me</label>
+                    </div>
+                    <button class="btn btn-primary btn-block rounded-pill" type="submit" name="submit" >Login</button>
+                  </form>
                 </div>
-                <div class="modal fade" id="contactModal">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title w-100 text-center">&#9993; Contact us &#9993;</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body border-bottom-0">
-                                <div class="text-center">
-                                    <p>Thank you for reaching out to us!</p>
-                                    <p>Our team will get in touch with you soon &#128515;</p>
-                                </div>
-                                <form id = "contact-form" action = "index.html">
-                                        <div class="form-group">
-                                            <label for = "name">Name</label>
-                                            <input id ="name" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for = "email-contact">Email</label>
-                                            <input id ="email-contact" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for = "phone">Mobile</label>
-                                            <input id ="phone" class="form-control" type ="text" name = "phone" required placeholder="(+91)__________">
-                                        </div>
-                                    <div class="text-center">
-                                        <button class="btn btn-primary rounded-pill ml-auto mr-auto" type="submit" id="contact-btn" name="submit-contact">
-                                            <span>Contact me</span>
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+              </div>
+            </div>
+          </div>
+          <!-- Contact modal -->
+          <div class="modal fade" id="contactModal">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title w-100 text-center">&#9993; Contact us &#9993;</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
                 </div>
-            </main>
-            <footer>
-                <button id="contact" class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contact us</button>
-                    <div id="social">
-                        <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
-                        <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
-                        <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
+                <div class="modal-body border-bottom-0">
+                  <div class="text-center">
+                    <p>Thank you for reaching out to us!</p>
+                    <p>Our team will get in touch with you soon &#128515;</p>
+                  </div>
+                  <form id = "contact-form" action = "index.html">
+                    <div class="form-group">
+                      <label for = "name">Name</label>
+                      <input id ="name" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
                     </div>
-                    <div id="copyright">
-                        <p>&copy; 2021 HOTEL BOOKING PVT LTD</p>
+                    <div class="form-group">
+                      <label for = "email-contact">Email</label>
+                      <input id ="email-contact" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
                     </div>
-            </footer>
-        </div>
-
-    </body>
+                    <div class="form-group">
+                      <label for = "phone">Mobile</label>
+                      <input id ="phone" class="form-control" type ="text" name = "phone" required placeholder="(+91)__________">
+                    </div>
+                    <div class="text-center">
+                      <button class="btn btn-primary rounded-pill ml-auto mr-auto" type="submit" id="contact-btn" name="submit-contact">
+                        <span>Contact me</span>
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
+        <footer>
+          <button id="contact" class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contact us</button>
+          <div id="social">
+            <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" alt="facebook" height = "20px" width = "20px"></a>
+            <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" alt="instagram" height = "20px" width = "20px"></a>
+            <a href = "https://twitter.com"><img src = "assests/images/twitter.png" alt="twitter" height = "20px" width = "20px"></a>
+          </div>
+          <div id="copyright">
+            <p>&copy; 2021 HOTEL BOOKING PVT LTD</p>
+          </div>
+        </footer>
+      </div>
+  </body>
 </html>
