--- a/payment.html
+++ b/payment.html
@@ -1,123 +1,125 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>
-            Payment
-        </title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="styles/common.css" type="text/css">
-        <link rel="stylesheet" href="styles/payment.css" type="text/css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-            <header>
-                <a id="logo-link" href="index.html"><img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
-                <button id="login" class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
-            </header>
-            <main>
-                <div id="payment-hotel">
-                    <img class = "payment-img" src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
-                    <div>
-                        <h2>Radisson Blu Hotel</h2>
-                        <span>#38 of 1289 hotels in New Delhi</span>
-                        <span>National Highway 8, New Delhi 110017 India</span>
-                    </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Payment</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/payment.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <header>
+      <a id="logo-link" href="index.html"><img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
+      <button id="login" class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
+    </header>
+    <main>
+      <!-- Hotel details -->
+      <div id="payment-hotel">
+        <img class = "payment-img" src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
+        <div>
+          <h2>Radisson Blu Hotel</h2>
+          <span>#38 of 1289 hotels in New Delhi</span>
+          <span>National Highway 8, New Delhi 110017 India</span>
+        </div>
+      </div>
+      <!-- Bill details -->
+      <div id="bill">
+        <div id="payment-details">
+          <p><span>Name:</span> Gibin Ninan</p>
+          <p><span>Number of Adults:</span> 2</p>
+          <p><span>Check-in Date:</span> 06-06-2020</p>
+          <p><span>Check-out Date:</span> 08-06-2020</p>
+        </div>    
+        <div id="tariff">
+          <p><span>Tariff Breakdown:</span> Rs.1000 x 2 Adults x 2 Nights</p>
+          <p><span>Total Answer:</span> Rs.4000</p>
+        </div>
+        <div>
+          <!-- TODO: button to be enabled after user is logged in -->
+          <a href = "payment.html" class="btn btn-success disabled" role="button" aria-disabled="true">Pay now</a>
+        </div>
+      </div>
+      <!-- Login modal -->
+      <div class="modal fade" id="loginModal" data-backdrop="static">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title w-100 text-center">Login</h5>
+              <buttom type="button" class="close" data-dismiss="modal" aria-label="close">
+                <span aria-hidden="true">&times;</span>
+              </buttom>
+            </div>
+            <div class="modal-body">
+              <form id="login-form" action = "index.html">
+                <div class="form-group">
+                  <label for ="email">Email Address</label>
+                  <input id="email" name="email" type="email" class="form-control" required placeholder="yourname@email.com" autocomplete="off">
                 </div>
-                <div id="bill">
-                    <div id="payment-details">
-                        <p><span>Name:</span> Gibin Ninan</p>
-                        <p><span>Number of Adults:</span> 2</p>
-                        <p><span>Check-in Date:</span> 06-06-2020</p>
-                        <p><span>Check-out Date:</span> 08-06-2020</p>
-                    </div>    
-                    <div id="tariff">
-                        <p><span>Tariff Breakdown:</span> Rs.1000 x 2 Adults x 2 Nights</p>
-                        <p><span>Total Answer:</span> Rs.4000</p>
-                    </div>
-                    <div>
-                        <a href = "payment.html" class="btn btn-success disabled" role="button" aria-disabled="true">Pay now</a>
-                    </div>
+                <div class="form-group">
+                  <label for ="password" >Password</label>
+                  <input id="password" name="password" type="password" class="form-control" required  placeholder="*******" autocomplete="off">
                 </div>
-                <div class="modal fade" id="loginModal" data-backdrop="static">
-                    <div class="modal-dialog">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title w-100 text-center">Login</h5>
-                          <buttom type="button" class="close" data-dismiss="modal" aria-label="close">
-                            <span aria-hidden="true">&times;</span>
-                          </buttom>
-                        </div>
-                        <div class="modal-body">
-                          <form id="login-form" action = "index.html">
-                            <div class="form-group">
-                                <label for ="email">Email Address</label>
-                                <input id="email" name="email" type="email" class="form-control" required placeholder="yourname@email.com" autocomplete="off">
-                            </div>
-                            <div class="form-group">
-                                <label for ="password" >Password</label>
-                                <input id="password" name="password" type="password" class="form-control" required  placeholder="*******" autocomplete="off">
-                            </div>
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="remember">
-                                <label class="form-check-label" for="remember">Remember me</label>
-                            </div>
-                            <button class="btn btn-primary btn-block rounded-pill" type="submit" name="submit" >
-                              Login
-                            </button>
-                          </form>
-                        </div>
-                      </div>
-                    </div>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="remember">
+                  <label class="form-check-label" for="remember">Remember me</label>
                 </div>
-                <div class="modal fade" id="contactModal">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title w-100 text-center">&#9993; Contact us &#9993;</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body border-bottom-0">
-                                <div class="text-center">
-                                    <p>Thank you for reaching out to us!</p>
-                                    <p>Our team will get in touch with you soon &#128515;</p>
-                                </div>
-                                <form id = "contact-form" action = "index.html">
-                                        <div class="form-group">
-                                            <label for = "name">Name</label>
-                                            <input id ="name" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for = "email-contact">Email</label>
-                                            <input id ="email-contact" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for = "phone">Mobile</label>
-                                            <input id ="phone" class="form-control" type ="text" name = "phone" required placeholder="(+91)__________">
-                                        </div>
-                                    <div class="text-center">
-                                        <button class="btn btn-primary rounded-pill ml-auto mr-auto" type="submit" id="contact-btn" name="submit-contact">
-                                            <span>Contact me</span>
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                <button class="btn btn-primary btn-block rounded-pill" type="submit" name="submit" >Login</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Contact modal -->
+      <div class="modal fade" id="contactModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title w-100 text-center">&#9993; Contact us &#9993;</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body border-bottom-0">
+              <div class="text-center">
+                <p>Thank you for reaching out to us!</p>
+                <p>Our team will get in touch with you soon &#128515;</p>
+              </div>
+              <form id = "contact-form" action = "index.html">
+                <div class="form-group">
+                  <label for = "name">Name</label>
+                  <input id ="name" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
                 </div>
-            </main>
-            <footer>
-              <button id="contact" class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contact us</button>
-                <div id="social">
-                    <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
-                    <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
-                    <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
+                <div class="form-group">
+                  <label for = "email-contact">Email</label>
+                  <input id ="email-contact" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
                 </div>
-                <p id="copyright">&copy; 2021 HOTEL BOOKING PVT LTD</p>
-            </footer>
-    </body>
+                <div class="form-group">
+                  <label for = "phone">Mobile</label>
+                  <input id ="phone" class="form-control" type ="text" name = "phone" required placeholder="(+91)__________">
+                </div>
+                <div class="text-center">
+                  <button class="btn btn-primary rounded-pill ml-auto mr-auto" type="submit" id="contact-btn" name="submit-contact">
+                    <span>Contact me</span>
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <button id="contact" class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contact us</button>
+      <div id="social">
+        <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" alt="facebook" height = "20px" width = "20px"></a>
+            <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" alt="instagram" height = "20px" width = "20px"></a>
+            <a href = "https://twitter.com"><img src = "assests/images/twitter.png" alt="twitter" height = "20px" width = "20px"></a>
+      </div>
+      <p id="copyright">&copy; 2021 HOTEL BOOKING PVT LTD</p>
+    </footer>
+  </body>
 </html>
